--- a/client/css/style.css
+++ b/client/css/style.css
@@ -9,13 +9,14 @@
 }
 
 :root{
-    --color-primary: rgb(0, 3, 8);
+    --color-primary: rgb(0, 0, 0);
     --color-white: rgb(255, 255, 255);
     --color-bg: rgb(4, 16, 20);
     --color-bg1: rgb(12, 43, 80);
     --color-bg2: rgb(7, 20, 36);
     --color-bg3: rgb(255, 196, 0);
-    --color-btn: linear-gradient(135deg, rgb(255, 177, 8) 0%, rgb(0, 6, 42) 100%);
+    --color-bg4: rgb(227, 227, 227);
+    --color-btn: linear-gradient(135deg, rgb(255, 174, 0) 0%, rgb(4, 16, 20) 100%);
 
     --container-width-lg: 80%;
     --container-width-md: 90%;
@@ -27,8 +28,8 @@
 body{
     font-family: 'Montserrat', sans-serif;
     line-height: 1.7;
-    color: var(--color-white);
-    background: var(--color-bg);
+    color: var(--color-bg);
+    background: var(--color-white);
 }
 
 .container{
@@ -82,7 +83,12 @@ img {
 
 }
 
+.abtn1 {
+    display: none;
+}
+
 .btn {
+    margin: 10px auto;
     display: inline-block;
     background: var(--color-white);
     padding: 1rem 2rem;
@@ -95,18 +101,18 @@ img {
     background: transparent;
     color: var(--color-white);
     border-color: var(--color-white);
-    transition: 2s;
 }
 
 .btn-primary {
     color: var(--color-white);
     background: var(--color-btn);
+    transition: 1s;
 }
 
 
 /* ================== NAVBAR =====================*/
 nav {
-    background: transparent;
+    background: var(--color-primary);
     width: 100vw;
     height: 5rem;
     position: fixed;
@@ -114,6 +120,11 @@ nav {
     border-bottom: 1px solid rgb(31, 31, 31);
     box-shadow: 16px 20px 20px #0000008c;
     z-index: 11;
+}
+
+/* Changes navbar style on scroll using javascript */
+.window-scroll {
+    background: var(--color-primary);
 }
 
 .nav__container {
@@ -139,15 +150,17 @@ nav button{
 }
 
 .nav__menu a:hover {
-    color: var(--color-bg2);
+    color: var(--color-bg3);
 }
 
 header {
     position: relative;
     top: 5rem;
     overflow: hidden;
-    height: 70vh;
+    height: 80vh;
     margin-bottom: 5rem;
+    background: var(--color-bg);
+    color: var(--color-white);
 }
 
 .header__container {
@@ -156,21 +169,43 @@ header {
     align-items: center;
     gap: 5rem;
     height: 100%;
+    justify-content: center;
+}
+
+.header__container h1{
+    text-align: center;
+}
+
+.header__left h1 {
+    display: flex;
+    position: relative;
+    align-items: center;
+    text-align: center;
+    bottom: 10px;
+    justify-content: center;
 }
 
 .header__left p {
     margin: 1rem 0 2 4rem;
+    padding: 2rem 0 5rem ;
+    font-weight: 5px;
 }
 
 /* =============== CATERGORIES =================== */
 
 .categories {
-    background: var(--color-bg2);
+    height: 90vh;
+    color: var(--color-white);
+    background: var(--color-white);
+    box-shadow: inset 0 0 5rem rgb(0, 0, 0);
+    cursor:default;
 }
 
 .categories h1 {
     line-height: 1;
     margin-bottom: 3rem;
+    justify-content: center;
+    text-align: center;
 }
 
 .categories__container {
@@ -180,10 +215,51 @@ header {
 }
 
 .categories__left {
-    margin-right: 2rem;
+    margin-right: inset 0 2rem 0 1rem;
+    background: url(../images/hands\ and\ money.jpeg);
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    box-shadow: 1rem 2rem 3rem #000000d8;
+    border-radius: 10px;
 }
 .categories__left p{
     margin: 1rem 0 3rem;
+    opacity: 0;
+    transform: translateY(10rem);
+    transition: 0.3s ease-in;
+}
+
+.categories__left:hover p {
+    opacity: 1;
+    transform: translateY(0rem);
+    transition: 1.2s ease-in-out;
+}
+
+.categories__left h1 {
+    opacity: 1;
+    transform: translateY(10rem);
+    transition: 1s ease-out;
+}
+
+.categories__left:hover h1 {
+    opacity: 1;
+    transform: translateY(00rem);
+    transition: 0.8s ease-in-out;
+}
+.cat-left{
+    display: cover;
+    position: relative;
+    background: rgba(0, 0, 0, 0.266);
+    padding: 4rem;
+    border-radius: 10px;
+    transition: 1s;
+}
+
+.cat-left:hover{
+    background: rgba(0, 0, 0, 0.848);
+    border-radius: 10px;
 }
 .categories__right {
     display: grid;
@@ -192,7 +268,8 @@ header {
 }
 
 .category{
-    background: var(--color-bg1);
+    background: var(--color-bg4);
+    color: rgb(0, 0, 0);
     padding: 2rem;
     border-radius: 2rem;
     transform: scale(0.9);
@@ -200,7 +277,393 @@ header {
 }
 
 .category:hover {
-    box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.408);
+    background: var(--color-white);
+    color: black;
+    font-weight: 10px;
+    box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.767);
     transform: scale(1);
 }
 
+.category-icon {
+    display: flex;
+    font-size: 1.8rem;
+    position: relative;
+    justify-content: center;
+}
+
+.category h5 {
+    display: flex;
+    padding: 0.4rem 0 1rem 0;
+    position: relative;
+    justify-content: center;
+    font-size: 1.2rem;
+}
+
+.category p {
+    display: flex;
+    font-weight:500;
+    text-align: center;
+    justify-content: center;
+}
+
+.privacy {
+    color: var(--color-primary);
+}
+
+footer {
+    color: var(--color-white);
+    background: var(--color-bg);
+    padding-top: 5rem;
+    font-size: 0.9rem;
+}
+
+.footer__container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5rem;
+}
+
+.footer__container > div h4 {
+    margin-bottom: 1.2rem;
+}
+
+.footer__1 > a{
+    display: flex;
+    margin-top: -1Srem;
+    padding-bottom: 2rem;
+}
+
+.footer__1 p {
+    margin: 0 0 2rem;
+}
+
+footer ul li {
+    margin-bottom: 0.7rem;
+}
+
+footer ul li a:hover{
+    text-decoration: underline;
+}
+
+.footer__socials {
+    display: flex;
+    gap: 1rem;
+    font-size: 1.2rem;
+    margin-top: 2rem;
+}
+
+.footer__copyright {
+    text-align: center;
+    margin-top: 4rem;
+    padding: 1.2rem 0;
+    border-top: 1px solid var(--color-bg2);
+}
+
+/* ======================== MEDIA QUERIES (TABLETS) ======================= */
+
+@media screen and (max-width: 1024px) {
+
+    .container {
+        width: var(--container-width-md);
+    }
+
+    h1 {
+        font-size: 2.2rem;
+    }
+
+    h2 {
+        font-size: 1.7rem;
+    }
+
+    h3 {
+        font-size: 1.4rem;
+    }
+
+    h4{
+        font-size: 1.2rem;
+    }
+
+    /* ================== NAVBAR ======================== */
+    nav button {
+        display: inline-block;
+        background: transparent;
+        font-size: 1.8rem;
+        color: var(--color-white);
+        cursor: pointer;
+    }
+
+    nav button#close-menu-btn {
+        display: none;
+    }
+
+    .btn {
+        margin: 10px auto;
+        display: inline-block;
+        background: var(--color-white);
+        padding: 1.2rem 2rem 0;
+        border: 1px solid transparent;
+        border-radius: 100px;
+        font-weight: 500;
+    }
+
+    .btn:hover {
+        background: transparent;
+        color: var(--color-white);
+        border-color: var(--color-white);
+    }
+
+    .btn-primary {
+        color: var(--color-white);
+        background: var(--color-btn);
+        transition: 1s;
+    }
+
+    .btn2 {
+        display:none;
+    }
+    .btn1{
+        background: var(--color-btn);
+        padding: 0.5rem 4rem 0.5rem 4rem;
+        border-radius: 100px;
+    }
+
+    .abtn1{
+        margin-top: -100px;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+    }
+    .nav__menu li .abtn1:hover{
+        margin-top: -100px;
+        background: transparent;
+    }
+
+    .nav__menu {
+        position: fixed;
+        top: 5rem;
+        right: 5%;
+        height: fit-content;
+        width: 18rem;
+        flex-direction: column;
+        gap: 0;
+        display: none;
+    }
+
+    .nav__menu li {
+        width: 100%;
+        height: 5.8rem;
+        animation: animateNavItems 400ms linear forwards;
+        transform-origin: top right;
+        opacity: 0;
+    }
+
+    .nav__menu li:nth-child(2) {
+        animation-delay: 100ms;
+    }
+
+    .nav__menu li:nth-child(3) {
+        animation-delay: 200ms;
+    }
+
+    .nav__menu li:nth-child(4) {
+        animation-delay: 300ms;
+    }
+
+    .nav__menu li:nth-child(5) {
+        animation-delay: 400ms;
+    }
+    .nav__menu li:nth-child(7) {
+        animation-delay: 500ms;
+    }
+
+    @keyframes animateNavItems {
+        0% {
+            transform: rotateZ(-90deg) rotateX(-90deg) rotateY(-135deg) scale(0);
+        }
+        100% {
+            transform: rotateZ(0) rotateX(0) rotateY(0) scale(1);
+            opacity: 1;
+        }
+    }
+
+    .nav__menu li a {
+        background: var(--color-bg4);
+        box-shadow: -4rem 6rem 10rem rgb(0, 0, 0);
+        color: var(--color-primary);
+        font-weight: 600;
+        width: 100%;
+        height: 100%;
+        display: grid;
+        transform: scaleX(0.9);
+        place-items: center;
+    }
+
+    .nav__menu li a:hover {
+        background: var(--color-white);
+        color: var(--color-primary);
+        transform: scaleX(1);
+    }
+
+    /* ==================== HEADER ==================== */
+
+    header {
+        height: 70vh;
+        margin-bottom: 4rem;
+    }
+
+    .header__container {
+        gap: 0;
+        padding-bottom: 3rem;
+        grid-template-columns: 1fr;
+    }
+
+    .header___left {
+        padding: 4rem;
+        display: grid;
+        position:absolute;
+        background: rgba(0, 0, 0, 0.355);
+        height: 50vh;
+        width: 50vh auto;
+        text-align: center;
+        justify-content: center;
+    }
+
+
+    .header__right {
+        width: 90vw;
+    }
+
+    /* ========================== CATEGORIES ===================== */
+    .categories {
+        height: auto;
+    }
+
+    .categories__container {
+        grid-template-columns: 1fr;
+        gap: 3rem;
+    }
+
+    .categories__left {
+        margin-right: 0;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .cat-left h1{
+        filter: blur();
+        transform: translateY(6rem);
+    }
+
+    /* ====================== COURSES ======================== */
+
+
+
+    /* ==================== FOOTER ========================= */
+    footer {
+        height: auto;
+    }
+    .footer__container {
+        grid-template-columns: 1fr 1fr;
+    }
+
+}
+
+/* ============================== MEDIA QUERIES FOR MOBILE PHONES ==================== */
+@media screen and (max-width: 680px) {
+
+    .container{
+        width: var(--container-width-sm);
+    }
+
+    .btn {
+        /* margin: 10px auto; */
+        display: inline-block;
+        background: var(--color-white);
+        padding: 0.5rem 1 0.5rem;
+        border: 1px solid transparent;
+        border-radius: 100px;
+        font-weight: 500;
+    }
+
+    .btn:hover {
+        background: transparent;
+        color: var(--color-white);
+        border-color: var(--color-white);
+    }
+
+    .btn-primary {
+        color: var(--color-white);
+        background: var(--color-btn);
+        transition: 1s;
+    }
+
+
+    .nav__menu {
+        right: 3%;
+    }
+
+    /* =========== HEADER SECTION =============== */
+
+    header {
+        height:100vh;
+    }
+
+    .header__container {
+        grid-template-columns: 1fr;
+        text-align: center;
+        margin-top: 0;
+    }
+
+    .header___left {
+        padding: 4rem;
+        margin-left: -5rem;
+        display: grid;
+        position:absolute;
+        background: rgba(0, 0, 0, 0.355);
+        height: 50vh;
+        width: 90vh;
+    }
+
+
+    .header__right {
+        width: 80vh;
+    }
+
+    /* ================ CATEGORIES ================= */
+    .categories__right {
+        grid-template-columns: 1fr;
+        gap: 0.7rem;
+    }
+
+    .category {
+        padding: 1rem;
+        border-radius: 1rem;
+    }
+
+    .category-icon {
+        margin-top: 4px;
+    }
+
+    /* =============== FOOTER ================ */
+    .footer__container {
+        grid-template-columns:  1fr;
+        text-align: center;
+        gap: 1.7rem;
+    }
+
+    .footer__1 a{
+        margin: 1rem auto;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    .footer__1 p{
+        margin: 1rem auto;
+    }
+
+    .footer__socials {
+        justify-content: center;
+
+    }
+
+}
